Organize files into folders; Implement working RecyclerView and CardView; Add comments;

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,8 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.intuit.sdp:sdp-android:1.0.2'
     compile 'org.scribe:scribe:1.3.5'
-    compile 'org.jsoup:jsoup:1.8.3'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
