--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -27,8 +28,8 @@
         </activity>
 
         <activity
-            android:name=".MaybeListActivity"
-            android:label="My Maybe List"
+            android:name=".SavedListActivity"
+            android:label="Saved List"
             android:screenOrientation="portrait">
         </activity>
 
