--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.deano2390:MaterialShowcaseView:1.0.5'
+
+    // https://github.com/deano2390/MaterialShowcaseView
+    // Forked above to my account to make use of unimplemented changes
+    // using https://jitpack.io
+    compile 'com.github.christarazi:MaterialShowcaseView:1.0.6'
 }
