--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.chris.randomrestaurantgenerator"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.0.1"
+        versionCode 4
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -17,16 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             // http://programmers.stackexchange.com/a/285309
-            buildConfigField("String", "API_CONSUMER_KEY", "\"" + CONSUMER_KEY +"\"")
-            buildConfigField("String", "API_CONSUMER_SECRET", "\"" + CONSUMER_SECRET +"\"")
-            buildConfigField("String", "API_TOKEN", "\"" + TOKEN +"\"")
-            buildConfigField("String", "API_TOKEN_SECRET", "\"" + TOKEN_SECRET +"\"")
+            buildConfigField("String", "API_CONSUMER_KEY", "\"" + CONSUMER_KEY + "\"")
+            buildConfigField("String", "API_CONSUMER_SECRET", "\"" + CONSUMER_SECRET + "\"")
+            buildConfigField("String", "API_TOKEN", "\"" + TOKEN + "\"")
+            buildConfigField("String", "API_TOKEN_SECRET", "\"" + TOKEN_SECRET + "\"")
         }
         debug {
-            buildConfigField("String", "API_CONSUMER_KEY", "\"" + CONSUMER_KEY +"\"")
-            buildConfigField("String", "API_CONSUMER_SECRET", "\"" + CONSUMER_SECRET +"\"")
-            buildConfigField("String", "API_TOKEN", "\"" + TOKEN +"\"")
-            buildConfigField("String", "API_TOKEN_SECRET", "\"" + TOKEN_SECRET +"\"")
+            buildConfigField("String", "API_CONSUMER_KEY", "\"" + CONSUMER_KEY + "\"")
+            buildConfigField("String", "API_CONSUMER_SECRET", "\"" + CONSUMER_SECRET + "\"")
+            buildConfigField("String", "API_TOKEN", "\"" + TOKEN + "\"")
+            buildConfigField("String", "API_TOKEN_SECRET", "\"" + TOKEN_SECRET + "\"")
         }
     }
 }
@@ -34,19 +34,25 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.intuit.sdp:sdp-android:1.0.2'
-    compile 'org.scribe:scribe:1.3.5'
-    compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
 
     // https://github.com/deano2390/MaterialShowcaseView
     // Forked above to my account to make use of unimplemented changes
     // using https://jitpack.io
-    compile 'com.github.christarazi:MaterialShowcaseView:1.0.6'
 
+
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.intuit.sdp:sdp-android:1.0.2'
+    compile 'org.scribe:scribe:1.3.5'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.christarazi:MaterialShowcaseView:1.0.6'
     compile 'org.sufficientlysecure:html-textview:1.3'
+    compile 'com.github.arimorty:floatingsearchview:2.0.1'
+    compile 'com.github.castorflex.smoothprogressbar:library-circular:1.1.0'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
 }
