--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.chris.randomrestaurantgenerator"
         minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 4
-        versionName "1.1"
+        targetSdkVersion 24
+        versionCode 5
+        versionName "1.2"
     }
     buildTypes {
         release {
@@ -38,21 +38,20 @@ dependencies {
     // https://github.com/deano2390/MaterialShowcaseView
     // Forked above to my account to make use of unimplemented changes
     // using https://jitpack.io
-
-
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
     compile 'com.intuit.sdp:sdp-android:1.0.2'
     compile 'org.scribe:scribe:1.3.5'
-    compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.christarazi:MaterialShowcaseView:1.0.6'
     compile 'org.sufficientlysecure:html-textview:1.3'
     compile 'com.github.arimorty:floatingsearchview:2.0.1'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.1.0'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
-    compile 'com.google.android.gms:play-services-auth:8.4.0'
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'pub.devrel:easypermissions:0.1.9'
 }
