--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.christarazi:MaterialShowcaseView:1.0.6'
+    compile 'com.github.deano2390:MaterialShowcaseView:1.1.0'
     compile 'org.sufficientlysecure:html-textview:1.3'
     compile 'com.github.arimorty:floatingsearchview:2.0.1'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.1.0'
