--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.chris.randomrestaurantgenerator"
         minSdkVersion 15
-        targetSdkVersion 24
-        versionCode 6
-        versionName "1.2.1"
+        targetSdkVersion 25
+        versionCode 7
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -17,19 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             // http://programmers.stackexchange.com/a/285309
-            buildConfigField("String", "API_CONSUMER_KEY", "\"" + CONSUMER_KEY + "\"")
-            buildConfigField("String", "API_CONSUMER_SECRET", "\"" + CONSUMER_SECRET + "\"")
-            buildConfigField("String", "API_TOKEN", "\"" + TOKEN + "\"")
-            buildConfigField("String", "API_TOKEN_SECRET", "\"" + TOKEN_SECRET + "\"")
+            buildConfigField("String", "API_ACCESS_TOKEN", "\"" + TOKEN + "\"")
         }
         debug {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
-            buildConfigField("String", "API_CONSUMER_KEY", "\"" + CONSUMER_KEY + "\"")
-            buildConfigField("String", "API_CONSUMER_SECRET", "\"" + CONSUMER_SECRET + "\"")
-            buildConfigField("String", "API_TOKEN", "\"" + TOKEN + "\"")
-            buildConfigField("String", "API_TOKEN_SECRET", "\"" + TOKEN_SECRET + "\"")
+            buildConfigField("String", "API_ACCESS_TOKEN", "\"" + TOKEN + "\"")
         }
     }
 }
@@ -41,16 +35,15 @@ dependencies {
     // https://github.com/deano2390/MaterialShowcaseView
     // Forked above to my account to make use of unimplemented changes
     // using https://jitpack.io
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:design:25.1.0'
     compile 'com.intuit.sdp:sdp-android:1.0.2'
-    compile 'org.scribe:scribe:1.3.5'
-    compile 'com.google.android.gms:play-services:9.4.0'
-    compile 'com.google.android.gms:play-services-ads:9.4.0'
-    compile 'com.google.android.gms:play-services-auth:9.4.0'
-    compile 'com.google.android.gms:play-services-gcm:9.4.0'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services-ads:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-gcm:10.0.1'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.deano2390:MaterialShowcaseView:1.1.0'
     compile 'org.sufficientlysecure:html-textview:1.3'
